--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/fegemo/streaming-arraybuffer-poc#readme",
   "dependencies": {
     "milligram": "^1.3.0",
+    "nifti-reader-js": "^0.5.4",
+    "pako": "^1.0.6",
     "stream-http": "^2.8.1"
   },
   "devDependencies": {
