--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/fegemo/streaming-arraybuffer-poc#readme",
   "dependencies": {
+    "cornerstone-math": "^0.1.6",
     "milligram": "^1.3.0",
     "nifti-reader-js": "^0.5.4",
     "pako": "^1.0.6",
@@ -36,6 +37,7 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "cornerstone-core": "^2.2.4",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.11.0",
     "webpack": "^4.6.0",
