--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "cornerstone-math": "^0.1.6",
     "milligram": "^1.3.0",
+    "ndarray": "^1.0.18",
     "nifti-reader-js": "^0.5.4",
     "pako": "^1.0.6",
     "stream-http": "^2.8.1"
